# SpectrumRetreat

./: .gitignore  CMakeLists.txt  README.md
Assets/: CMakeLists.txt  scene.txt
Assets/Shaders/: fragment.glsl  vertex.glsl
LibGL/: CMakeLists.txt
LibGL/Dependencies/: CMakeLists.txt
LibGL/Dependencies/Header/glad/: glad.h
LibGL/Dependencies/Source/: glad.c
LibGL/LowRenderer/: CMakeLists.txt
LibGL/LowRenderer/Header/: Camera.h  Light.h  SceneGraph.h  SceneNode.h
LibGL/LowRenderer/Source/: Camera.cpp  light.cpp
LibGL/Resources/: CMakeLists.txt
LibGL/Resources/Header/: Buffer.h  GLTexture.h  Model.h  ResourceManager.h  Shader.h  Vertex.h  VertexAttributes.h
LibGL/Resources/Source/: Buffer.cpp  Model.cpp  Shader.cpp  VertexAttributes.cpp
LibMath/: CMakeLists.txt
LibMath/Header/LibMath/: Arithmetic.h  Colision3D.h  Geometry3D.h  Matrix4Vector4Operation.h  Object2D.h  Trigonometry.h
LibMath/Header/LibMath/Angle/: Degree.h  Radian.h
LibMath/Header/LibMath/Matrix/: Matrix2.h  Matrix3.h  Matrix4.h
LibMath/Header/LibMath/Vector/: Vector2.h  Vector3.h  Vector4.h
LibMath/Source/: Angle.cpp  Arithmetic.cpp  Colision3D.cpp  Geometry3D.cpp  Matrix.cpp  Object2D.cpp  Trigonometry.cpp  Vector.cpp
Platformer/: CMakeLists.txt
Platformer/include/: Application.h  ButtonUI.h  CircleUI.h  GameManager.h  GameObject.h  Physics.h  Player.h  Raycast.h  SoundManager.h  UIElement.h  UIManager.h
Platformer/src/: Application.cpp  ButtonUI.cpp  CircleUI.cpp  GameManager.cpp  GameObject.cpp  Physics.cpp  Player.cpp  Raycast.cpp  SoundManager.cpp  UIManager.cpp  main.cpp
